[package]
name = "order_service"
version = "0.1.0"
edition = "2021"
default-run = "main"

[[bin]]
name = "main"
path = "src/main.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"
dotenvy = "0.15"
tokio-postgres = {version = "0.7.11", features = ["with-serde_json-1"] }
lru = "0.12.4"
reqwest = {version = "0.12.7", features = ["json"]}
rand = "0.8.5"
chrono = "0.4.38"
clap = { version = "4.5.17", features = ["derive"] }
log = "0.4.22"
env_logger = "0.11.5"
ctor = "0.2.8"

